--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Mini Utilities JavaScript Library",
   "scripts": {
     "start": "webpack -w",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "test": "mocha",
+    "prestart": "npm test",
+    "prebuild": "npm test"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.0",
     "webpack": "^3.5.5"
   }
 }
