Started README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ds-minu-utils",
+  "name": "ds-mini-utils",
   "version": "0.1.0",
   "description": "Mini Utilities JavaScript Library",
   "scripts": {
