--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/danieluy/mini_utils.git"
   },
-  "private": true,
+  "private": false,
   "author": "Daniel Sosa <danielsosa.dev@gmail.com>",
   "license": "MIT",
   "main": "./build/DSMiniUtils.js",
